- Added dynamically generated table-of-contents menu to output document
- Fixed: Would not show output of system() commands to stderr on the console (on Unix-like systems)
- Allow some markup inside <text> elements in plugins, and auto-add breaks only for duplicate newlines.
- Reorganized t-test plugin, and add support for single sample t-tests
- Fixed: Function argument hints for the second half of the parameter list would not be quoted, correctly
- Improve keypress handling issues in the R Console, when the cursor or a selection is outside the editable range
- Fixed: Failure to open workspaces with non-latin1 filenames from the command line
- Fixed: Saving / restoring workplace layout would fail when saving to directories with unusual characters
- Only install translations which are at least 80% complete (not counting strings in plugins, which are not yet translatable)
- When asking for workspace file to open, use appropriate file filter
- When configured to ask for workspace to open on startup, don't prompt to save, first
- Fixed: potential crash when clicking "Select all updates" in the package installation dialog
- Fixed: potential crash in object name completion under certain conditions
- Simplified the "Sort Data" plugin, and added a help page
- Fixed: On Windows, detached windows would sometimes be positioned with the menubar outside the upper screen edge
- Add GUI support for inspecting the call stack during debugging
- The backend executable is no longer linked against KDE libraries
- Objects, which are not acceptable in a varslot, will still be shown, there, with a warning		TODO: add a UI to override

--- Version 0.5.7 - Oct-23-2011
- Fixed: Would not system-defined text color for argument hints
- Do not treat arrays (which are not a matrix) as hierarchical named objects in the object browser
- Do not analyse more than 100000 name child-objects per object (avoids hangs on such extreme data)
- Fixed: Problems with using mclapply() inside RKWard